--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
         "php": "^7.2",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
-
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "5.7.0"
+        "laravelcollective/html": "5.7.0",
+        "realrashid/sweet-alert": "^3.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
